# cheese

./: .gitignore  AUTHORS  ChangesBy-Lenik.md  meson.build
data/: headerbar.ui  org.gnome.Cheese.gschema.xml  shortcuts.ui
docs/reference/: autoshoot.xml  borderless.xml  cheese-docs.xml  cheese.xml  meson.build
libcheese/: cheese-camera-device.c  cheese-camera.c  cheese-camera.h  cheese-fileutil.c  cheese-fileutil.h
plugins/video_canvas/: gstcanvas.c  meson.build
plugins/video_fft/: gstvideo_fft.c  gstvideo_fft_opencv.cpp  meson.build
plugins/video_lux/: gstvideo_lux.c  meson.build
src/: cheese-application.vala  cheese-window.vala
src/vapi/: cheese-common.vapi
